Fixed bug #47455 - a failure with main.myisam_crash_before_flush_keys.test on Windows.